{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 80,
  "lineage": "a0cbbc99-c752-f919-2dee-895972afe8b3",
  "resources": [
    {
      "module": "module.test-fabs.module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-01T10:47:19.527-08:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gdccompute/global/firewalls/image-builder-ingress-tag-http",
            "log_config": [],
            "name": "image-builder-ingress-tag-http",
            "network": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/networks/image-builder",
            "priority": 1000,
            "project": "gdccompute",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/firewalls/image-builder-ingress-tag-http",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking",
            "module.test-fabs.module.vpc.data.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_global_address.psa_ranges",
            "module.test-fabs.module.vpc.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_network_peering.local",
            "module.test-fabs.module.vpc.google_compute_network_peering.remote",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.test-fabs.module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-01T10:47:19.777-08:00",
            "deny": [],
            "description": "Allow http to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gdccompute/global/firewalls/image-builder-ingress-tag-https",
            "log_config": [],
            "name": "image-builder-ingress-tag-https",
            "network": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/networks/image-builder",
            "priority": 1000,
            "project": "gdccompute",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/firewalls/image-builder-ingress-tag-https",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking",
            "module.test-fabs.module.vpc.data.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_global_address.psa_ranges",
            "module.test-fabs.module.vpc.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_network_peering.local",
            "module.test-fabs.module.vpc.google_compute_network_peering.remote",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.test-fabs.module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tag-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-01T10:47:19.573-08:00",
            "deny": [],
            "description": "Allow SSH to machines with matching tags.",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gdccompute/global/firewalls/image-builder-ingress-tag-ssh",
            "log_config": [],
            "name": "image-builder-ingress-tag-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/networks/image-builder",
            "priority": 1000,
            "project": "gdccompute",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/firewalls/image-builder-ingress-tag-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking",
            "module.test-fabs.module.vpc.data.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_global_address.psa_ranges",
            "module.test-fabs.module.vpc.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_network_peering.local",
            "module.test-fabs.module.vpc.google_compute_network_peering.remote",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.test-fabs.module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "custom-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "image-builder-ingress-builder-vm",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "5985",
                  "5986"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-01T10:47:19.784-08:00",
            "deny": [],
            "description": "Allow image builder vm ingress traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gdccompute/global/firewalls/image-builder-ingress-builder-vm",
            "log_config": [],
            "name": "image-builder-ingress-builder-vm",
            "network": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/networks/image-builder",
            "priority": 1000,
            "project": "gdccompute",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/firewalls/image-builder-ingress-builder-vm",
            "source_ranges": [
              "10.0.0.0/8",
              "130.211.0.0/22",
              "172.16.0.0/16",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": [
              "image-builder-vm@gdccompute.iam.gserviceaccount.com"
            ],
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking",
            "module.test-fabs.module.service-account-image-builder-vm.data.google_service_account.service_account",
            "module.test-fabs.module.service-account-image-builder-vm.google_service_account.service_account",
            "module.test-fabs.module.vpc.data.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_global_address.psa_ranges",
            "module.test-fabs.module.vpc.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_network_peering.local",
            "module.test-fabs.module.vpc.google_compute_network_peering.remote",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.test-fabs.module.nat",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-01T10:47:20.043-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gdccompute/regions/us-west1/routers/default-nat",
            "name": "default-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/networks/image-builder",
            "project": "gdccompute",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gdccompute/regions/us-west1/routers/default-nat"
          },
          "dependencies": [
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking",
            "module.test-fabs.module.vpc.data.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_global_address.psa_ranges",
            "module.test-fabs.module.vpc.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_network_peering.local",
            "module.test-fabs.module.vpc.google_compute_network_peering.remote",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.test-fabs.module.nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "gdccompute/us-west1/default-nat/default",
            "log_config": [
              {
                "enable": false,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 65536,
            "min_ports_per_vm": 64,
            "name": "default",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gdccompute",
            "region": "us-west1",
            "router": "default-nat",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/gdccompute/regions/us-west1/subnetworks/image-builder",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.test-fabs.module.nat.google_compute_router.router",
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking",
            "module.test-fabs.module.vpc.data.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_global_address.psa_ranges",
            "module.test-fabs.module.vpc.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_network_peering.local",
            "module.test-fabs.module.vpc.google_compute_network_peering.remote",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.vpc.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.vpc.google_compute_subnetwork.proxy_only",
            "module.test-fabs.module.vpc.google_compute_subnetwork.subnetwork",
            "module.test-fabs.module.vpc.google_service_networking_connection.psa_connection"
          ]
        }
      ]
    },
    {
      "module": "module.test-fabs.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Terraform-managed.",
            "enable_ula_internal_ipv6": false,
            "id": "projects/gdccompute/global/networks/image-builder",
            "mtu": 0,
            "name": "image-builder",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2657143046215719374",
            "project": "gdccompute",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/networks/image-builder"
          },
          "dependencies": [
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking"
          ]
        }
      ]
    },
    {
      "module": "module.test-fabs.module.vpc",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "private-googleapis",
          "schema_version": 0,
          "attributes": {
            "description": "Terraform-managed.",
            "dest_range": "199.36.153.8/30",
            "id": "projects/gdccompute/global/routes/image-builder-private-googleapis",
            "name": "image-builder-private-googleapis",
            "network": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/networks/image-builder",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "gdccompute",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/routes/image-builder-private-googleapis",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking",
            "module.test-fabs.module.vpc.data.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "restricted-googleapis",
          "schema_version": 0,
          "attributes": {
            "description": "Terraform-managed.",
            "dest_range": "199.36.153.4/30",
            "id": "projects/gdccompute/global/routes/image-builder-restricted-googleapis",
            "name": "image-builder-restricted-googleapis",
            "network": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/networks/image-builder",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "gdccompute",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/routes/image-builder-restricted-googleapis",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking",
            "module.test-fabs.module.vpc.data.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.test-fabs.module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-west1/image-builder",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-01T10:47:20.223-08:00",
            "description": "Terraform-managed.",
            "gateway_address": "172.16.192.1",
            "id": "projects/gdccompute/regions/us-west1/subnetworks/image-builder",
            "ip_cidr_range": "172.16.192.0/24",
            "name": "image-builder",
            "network": "https://www.googleapis.com/compute/v1/projects/gdccompute/global/networks/image-builder",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gdccompute",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gdccompute/regions/us-west1/subnetworks/image-builder",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.test-fabs.module.project.data.google_bigquery_default_service_account.bq_sa",
            "module.test-fabs.module.project.data.google_project.project",
            "module.test-fabs.module.project.data.google_storage_project_service_account.gcs_sa",
            "module.test-fabs.module.project.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.service_projects",
            "module.test-fabs.module.project.google_compute_shared_vpc_service_project.shared_vpc_service",
            "module.test-fabs.module.project.google_kms_crypto_key_iam_member.service_identity_cmek",
            "module.test-fabs.module.project.google_org_policy_policy.default",
            "module.test-fabs.module.project.google_project.project",
            "module.test-fabs.module.project.google_project_default_service_accounts.default_service_accounts",
            "module.test-fabs.module.project.google_project_iam_member.servicenetworking",
            "module.test-fabs.module.project.google_project_iam_member.shared_vpc_host_robots",
            "module.test-fabs.module.project.google_project_service.project_services",
            "module.test-fabs.module.project.google_project_service_identity.jit_si",
            "module.test-fabs.module.project.google_project_service_identity.servicenetworking",
            "module.test-fabs.module.vpc.data.google_compute_network.network",
            "module.test-fabs.module.vpc.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}